<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Hit\'NSync</string>
    <string name="MultiPlayer">Többjátékos</string>
    <string name="SinglePlayer">Egyjátékos</string>
    <string name="Setting">Beállítás</string>
    <string name="Stats">Statisztika</string>
    <string name="Credits">Leírás</string>
    <string name="TextStart">Kellemes süllyedést</string>
    <string name="Ok">Ok</string>
    <string name="Name">Neved:</string>
    <string name="action_settings">Settings</string>
    <string name="kezdes">Üdvözlünk a játékban! Reméljük, jól fogsz szórakozni, egy retro torpedó játékban</string>
    <string name="hajo_lerakas">A fekete játékmező a saját táblád. Lerakdni úgy tudod, ha rákattintasz egy mezőre</string>
    <string name="hajo_forgatas">A hajódat úgy tudod elforgatni, ha mégegyszer rákattintasz ugyanarra a mezőre, amire leraktad</string>
    <string name="csata">A csata alatt felváltva lőhettek egymás hajóira, a piros játékmezőn. A célpont a kijelölt mező</string>
    <string name="talalat">A találatot a játékmezőkön piros színnel, a hibás lövéseket fekete körrel jelüljük</string>
    <string name="cel">A cél: minél előbb megsemmisíteni az ellenfél hajóit</string>
    <string name="jatekmod">A játékot játszathot barátoddal BlueTooth segítségével vagy gépi ellenfél ellen</string>

    <!-- BluetoothChat -->
    <string name="not_connected">Nincs kapcsolat</string>
    <string name="bt_not_enabled_leaving">Bluetooth nincs bekapcsolva</string>
    <string name="title_connecting">kapcsolódás...</string>
    <string name="title_connected_to">kapcsolódás: <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">nincs kapcsolat</string>

    <!-- DeviceListActivity -->
    <string name="scanning">eszközök keresése...</string>
    <string name="select_device">válassz készüléket</string>
    <string name="none_paired">Nincsenek párosított eszközök</string>
    <string name="none_found">Nem található eszköz</string>
    <string name="title_paired_devices">Párosított készülékek</string>
    <string name="title_other_devices">További elérhető készülékek</string>
    <string name="button_scan">Eszközök keresése</string>
    <string name="ok">OK</string>
    <string name="megse">Mégse</string>
    <string name="mentsek">Elmentsem a játékállást?</string>
    <string name="gameover">A játéknak vége</string>
    <string name="betoltsek">Betöltsem a mentett játékállást?</string>
    <string name="gyoztes">Győztes:</string>
    <string name="vesztes">Vesztes:</string>
    <string name="pontszam">Pontszáma:</string>

</resources>