<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.lilacode.hitnsync.menu.Menu" 
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextStart"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnMulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MultiPlayer"
        android:textSize="25dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SinglePlayer" 
        android:textSize="25dp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btnOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Setting"
        android:textSize="25dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stats"
        android:textSize="25dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Credits"
        android:textSize="25dp"
        android:textStyle="italic" />

</LinearLayout>