<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kezdes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hajo_lerakas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hajo_forgatas"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/csata"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talalat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jatekmod"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000ff"
            android:textSize="25dp" />
    </LinearLayout>

</LinearLayout>