<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kulsokeret"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gameover"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyoztes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/gyoztes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.65"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontszam"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/gyoztespont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.11"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vesztes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/vesztes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.08"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pontszam"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/vesztespont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/Vege"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>
