<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/kulsokeret"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dip" >

    <LinearLayout
        android:id="@+id/mExitDialogDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        android:paddingTop="15dip" >

        <TextView
            android:id="@+id/torlesszoveg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/mentsek"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mExitDialogTitleBorder"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/mExitDialogDesc"
        android:background="#4BBAE3"
        android:orientation="horizontal" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mExitDialogTitleBorder"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dip" >

            <Button
                android:id="@+id/megse"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/megse" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="5dip" >

            <Button
                android:id="@+id/ok"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>